Adding text background coloration functionnalities

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -120,20 +120,35 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_P
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"     'File'		"This global variable stores the name of the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH"     'Filepath'	"This global variable stores the path to the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
+# -------
+
+# Defining the project's background color code storage file.
+# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT   --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
+# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME     --> Default --> "fgcolors.tmp"
+# __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH     --> Default --> "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME"
+
+__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
+__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME="fgcolors.tmp";
+__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH="$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT" 'Dirpath'	"This global variable stores the path to the Decho background color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME"     'File'		"This global variable stores the name of the Decho background color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH"     'Filepath'	"This global variable stores the path to the Decho background color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+
 
 # -------
 
-# Defining the project's color code storage file.
-# __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
-# __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME   --> Default --> "fgcolors.tmp"
-# __BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME"
+# Defining the project's text color code storage file.
+# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT --> Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PATH"
+# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME   --> Default --> "fgcolors.tmp"
+# __BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH   --> Default --> "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME"
 
-__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
-__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME="fgcolors.tmp";
-__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH="$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME";
+__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
+__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME="fgcolors.tmp";
+__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH="$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME";
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT"   'Dirpath'	"This global variable stores the path to the Decho color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME"       'File'		"This global variable stores the name of the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH"       'Filepath'	"This global variable stores the path to the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT"   'Dirpath'	"This global variable stores the path to the Decho color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME"       'File'		"This global variable stores the name of the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH"       'Filepath'	"This global variable stores the path to the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
 # -----------------------------------------------
