--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -25,10 +25,14 @@ function BU::Main::ModConfig::Colors::CheckBGColor()
         if command -v tput &> /dev/null; then
             tput setab "$1" || { echo -ne "\e[" && return 0; }
 
-            echo "$1" > "$__BU_MAIN_PROJECT_BG_COLOR_CODE_FILE_PATH";
+            if ! BU::Main::Checkings::CheckProjectRelatedFile "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT" "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME" "f"; then
+                BU::Main::Errors::HandleSmallErrors 'E' "Unable to create the $(BU::Decho "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH") file" 'E' 'CPLS'
+            fi
+
+            echo "$1" > "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH";
 
             [ "$?" -ne 0 ] && {
-                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_BG_COLOR_CODE_FILE_PATH") (bgcolors.tmp) file doesn't exists" >&2; echo -e >&2;
+                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH") (bgcolors.tmp) file doesn't exists" >&2; echo -e >&2;
 
                 exit 1;
             }
@@ -52,14 +56,14 @@ function BU::Main::ModConfig::Colors::CheckTextColor()
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
  
-#            if ! BU::Main::Checkings::CheckProjectRelatedFile "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PARENT" "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_NAME" "f"; then
- #               BU::Main::Errors::HandleSmallErrors 'E' "Unable to create the $(BU::Decho "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH") file" 'E' 'CPLS'
-  #          fi
+            if ! BU::Main::Checkings::CheckProjectRelatedFile "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT" "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME" "f"; then
+                BU::Main::Errors::HandleSmallErrors 'E' "Unable to create the $(BU::Decho "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH") file" 'E' 'CPLS'
+            fi
 
-            echo "$1" > "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH";
+            echo "$1" > "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH";
 
             [ "$?" -ne 0 ] && {
-                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_TEXT_COLOR_CODE_FILE_PATH") (fgcolors.tmp) file doesn't exists" >&2; echo -e >&2;
+                echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH") (fgcolors.tmp) file doesn't exists" >&2; echo -e >&2;
 
                 exit 1;
             }
