--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -21,13 +21,13 @@ function BU::Main::ModConfig::Text::PrintTextModeCmdSubs() { printf "This comman
 ## FUNCTIONS - TEXT FORMATTING
 
 # Writing the command substitution text when a formatting is defined.
-function BU::Main::ModConfig::Text::PrintFormatCmdSubs() { printf "This command substitution executes the « BU::Main::Status::CheckTextFormat() » function in order to format the text with the defined « %s » text formatting" "$1"; }
+function BU::Main::ModConfig::Text::PrintFormatCmdSubs() { printf "This command substitution executes the « BU::Main::Checkings::CheckTextFormat() » function in order to format the text with the defined « %s » text formatting" "$1"; }
 
 # Writing the command substitution text when a resetting is defined.
-function BU::Main::ModConfig::Text::PrintResetCmdSubs() { printf "This command substitution executes the « BU::Main::Status::CheckTextFormat() » function in order to reset the text from the « %s » text formatting" "$1"; }
+function BU::Main::ModConfig::Text::PrintResetCmdSubs() { printf "This command substitution executes the « BU::Main::Checkings::CheckTextFormat() » function in order to reset the text from the « %s » text formatting" "$1"; }
 
 # Writing the command substitution text when a total resetting is defined.
-function BU::Main::ModConfig::Text::PrintAllResetCmdSubs() { printf "This command substitution executes the « BU::Main::Status::CheckTextFormat() » function in order to reset the text from the every text formatting"; }
+function BU::Main::ModConfig::Text::PrintAllResetCmdSubs() { printf "This command substitution executes the « BU::Main::Checkings::CheckTextFormat() » function in order to reset the text from the every text formatting"; }
 
 # -----------------------------------------------
 
@@ -84,55 +84,55 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAG
 ## TEXT FORMATTING
 
 # Blink
-__BU_MAIN_TXT_FMT_BLINK="$(BU::Main::Status::CheckTextFormat 'blink' '5')";
-__BU_MAIN_TXT_FMT_BLINK_RESET="$(BU::Main::Status::CheckTextFormat 'sgr0' '25')";
+__BU_MAIN_TXT_FMT_BLINK="$(BU::Main::Checkings::CheckTextFormat 'blink' '5')";
+__BU_MAIN_TXT_FMT_BLINK_RESET="$(BU::Main::Checkings::CheckTextFormat 'sgr0' '25')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_BLINK";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BLINK'        "$__BU_MAIN_TXT_FMT_BLINK"          'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "blink")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 printf "%s" "$__BU_MAIN_TXT_FMT_BLINK_RESET";   BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BLINK_RESET'  "$__BU_MAIN_TXT_FMT_BLINK_RESET"    'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "blink")"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Bold
-__BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Status::CheckTextFormat 'bold' '1')";
-__BU_MAIN_TXT_FMT_BOLD_RESET="$(BU::Main::Status::CheckTextFormat 'rmso' '21')";
+__BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Checkings::CheckTextFormat 'bold' '1')";
+__BU_MAIN_TXT_FMT_BOLD_RESET="$(BU::Main::Checkings::CheckTextFormat 'rmso' '21')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_BOLD";          BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD'         "$__BU_MAIN_TXT_FMT_BOLD"           'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "bold")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 printf "%s" "$__BU_MAIN_TXT_FMT_BOLD_RESET";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD_RESET'   "$__BU_MAIN_TXT_FMT_BOLD_RESET"     'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "bold")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
  exit 0;
 # Dim
-__BU_MAIN_TXT_FMT_DIM="$(BU::Main::Status::CheckTextFormat 'dim' '2')";
-__BU_MAIN_TXT_FMT_DIM_RESET="$(BU::Main::Status::CheckTextFormat '' '22')";
+__BU_MAIN_TXT_FMT_DIM="$(BU::Main::Checkings::CheckTextFormat 'dim' '2')";
+__BU_MAIN_TXT_FMT_DIM_RESET="$(BU::Main::Checkings::CheckTextFormat '' '22')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_DIM";       BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_DIM'              "$__BU_MAIN_TXT_FMT_DIM"            'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "dim")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 printf "%s" "$__BU_MAIN_TXT_FMT_DIM_RESET"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_DIM_RESET'        "$__BU_MAIN_TXT_FMT_DIM_RESET"      'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "dim")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Hidden (useful for password typing).
-__BU_MAIN_TXT_FMT_HIDDEN="$(BU::Main::Status::CheckTextFormat '' '8')";
-__BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU::Main::Status::CheckTextFormat '' '28')";
+__BU_MAIN_TXT_FMT_HIDDEN="$(BU::Main::Checkings::CheckTextFormat '' '8')";
+__BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU::Main::Checkings::CheckTextFormat '' '28')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_HIDDEN";        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_HIDDEN'       "$__BU_MAIN_TXT_FMT_HIDDEN"         'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "hidden")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 printf "%s" "$__BU_MAIN_TXT_FMT_HIDDEN_RESET";  BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_HIDDEN_RESET' "$__BU_MAIN_TXT_FMT_HIDDEN_RESET"   'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "hidden")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Italic
-__BU_MAIN_TXT_FMT_ITALIC="$(BU::Main::Status::CheckTextFormat 'sitm' '3')";
-__BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU::Main::Status::CheckTextFormat 'ritm' '23')";
+__BU_MAIN_TXT_FMT_ITALIC="$(BU::Main::Checkings::CheckTextFormat 'sitm' '3')";
+__BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU::Main::Checkings::CheckTextFormat 'ritm' '23')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_ITALIC";        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_ITALIC'       "$__BU_MAIN_TXT_FMT_ITALIC"         'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "italic")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 printf "%s" "$__BU_MAIN_TXT_FMT_ITALIC_RESET";  BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_ITALIC_RESET' "$__BU_MAIN_TXT_FMT_ITALIC_RESET"   'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "italic")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Reset
-__BU_MAIN_TXT_FMT_RESET="$(BU::Main::Status::CheckTextFormat 'sgr0' '0')";
+__BU_MAIN_TXT_FMT_RESET="$(BU::Main::Checkings::CheckTextFormat 'sgr0' '0')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_RESET"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_RESET' "$__BU_MAIN_TXT_FMT_RESET" 'CMD' "$(BU::Main::ModConfig::Text::PrintAllResetCmdSubs)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Strikethrough
-__BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU::Main::Status::CheckTextFormat '' '9')";
-__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU::Main::Status::CheckTextFormat '' '29')";
+__BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU::Main::Checkings::CheckTextFormat '' '9')";
+__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU::Main::Checkings::CheckTextFormat '' '29')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_STRIKETHROUGH";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_STRIKETHROUGH'        "$__BU_MAIN_TXT_FMT_STRIKETHROUGH"          'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "strikethrough")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 printf "%s" "$__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET";   BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'  "$__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET"    'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "strikethrough")"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Underline
-__BU_MAIN_TXT_FMT_UNDERLINE="$(BU::Main::Status::CheckTextFormat 'smul' '4')";
-__BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU::Main::Status::CheckTextFormat 'rmul' '24')";
+__BU_MAIN_TXT_FMT_UNDERLINE="$(BU::Main::Checkings::CheckTextFormat 'smul' '4')";
+__BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU::Main::Checkings::CheckTextFormat 'rmul' '24')";
 
 printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_UNDERLINE'        "$__BU_MAIN_TXT_FMT_UNDERLINE"          'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "Underline")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET";   BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'  "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET"    'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "Underline")"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
