Found the cause of the infinite loop

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -15,7 +15,7 @@
 # Default value : "false"
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_DEBUG="true"
+__BU_MAIN_STAT_DEBUG="false"
 
 
 # "BU::Main::Checkings::CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
