--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -80,9 +80,15 @@ function BU::Main::ModConfig::Colors::SetTextColor()
 }
 
 # Writing the command substitution text for the text coloration.
-function BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd() { printf "This command substitution executes the « BU::Main::ModConfig::Colors::SetTextColor() » function in order to color the text with the defined « %s » color's code" "$1"; }
 
-# Writing the command substitution text for the background coloration.
+# Don't call the "BU::DechoHighlightFunction()" function to color the function name, it must stay perfectly visible on every colors, and the default,
+# and the "$__BU_MAIN_STAT_DECHO" function's value is still set as its default value (in order to avoid bugs during the main module's initialization) : forbid
+function BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd() { printf "This command substitution executes the $(BU::DechoHighlightFunction "BU::Main::ModConfig::Colors::SetTextColor") function in order to color the text with the defined « %s » color's code" "$1"; }
+
+# Writing the command substitution text for the background coloration
+
+# Don't call the "BU::DechoHighlightFunction()" function to color the function name, it must stay perfectly visible on every colors, and the default,
+# and the "$__BU_MAIN_STAT_DECHO" function's value is still set as its default value (in order to avoid bugs during the main module's initialization) : forbid
 function BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd() { printf "This command substitution executes the « BU::Main::ModConfig::Colors::SetBGColor() » function in order to color the text's background with the defined « %s » color's code" "$1"; }
 
 
