--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -471,7 +471,7 @@ printf "%s" "$__BU_MAIN_COLOR_BG_TEAL"; BU::ModuleInit::DisplayInitGlobalVarsInf
 
 # Turquoise colored background.
 __BU_MAIN_COLOR_BG_TURQUOISE="$(BU::Main::ModConfig::Colors::SetBGColor   "$__BU_MAIN_COLOR_CODE_TURQUOISE")";
-printf "%s" "$__BU_MAIN_COLOR_BG_TURQUOISE"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_TURQUOISE' "turquoise"            'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_TURQUOISE")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_TURQUOISE"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_TURQUOISE' "$__BU_MAIN_COLOR_BG_TURQUOISE" 'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "turquoise")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Violet colored background.
 __BU_MAIN_COLOR_BG_VIOLET="$(BU::Main::ModConfig::Colors::SetBGColor      "$__BU_MAIN_COLOR_CODE_VIOLET")";
