Big save : modified some source files and updating the French Headers.tex documentation

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -87,7 +87,7 @@ __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 # Default value : ".6"
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_TIME_HEADER=".6"
+__BU_MAIN_STAT_TIME_HEADER="1"
 
 
 # Project's newlines pause time.
