Improving the French Headers.tex documentation

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -13,7 +13,7 @@
 
 ## FUNCTIONS
 
-# 
+# Writing the text zone's background color into a file, to be processed by any function which needs to know what is the current color.
 function BU::Main::ModConfig::Colors::SetBGColor()
 {
 	#**** Parameters ****
@@ -46,7 +46,7 @@ function BU::Main::ModConfig::Colors::SetBGColor()
     fi
 }
 
-# Writing the color code into a file, to be processed by any function which needs to know what is the current text color.
+# Writing the text's color code into a file, to be processed by any function which needs to know what is the current text color.
 function BU::Main::ModConfig::Colors::SetTextColor()
 {
 	#**** Parameters ****
