Corrected the spelling of the fuchsia color

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -57,7 +57,7 @@ function BU::Main::ModConfig::Colors::SetTextColor()
 	if BU::Main::Status::CheckStatAllowFormatting; then
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
- 
+
             # Checking if the "fgcolors.tmp" (foreground color) file exists.
             if ! BU::Main::Checkings::CheckProjectRelatedFile "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PARENT" "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_NAME" "f"; then
                 BU::Main::Errors::HandleSmallErrors 'E' "Unable to create the $(BU::Decho "$__BU_MAIN_PROJECT_COLOR_TEXT_CODE_FILE_PATH") file" 'E' 'CPLS'
@@ -118,7 +118,7 @@ __BU_MAIN_COLOR_CODE_LIME='10';
 __BU_MAIN_COLOR_CODE_YELLOW='11';
 
 __BU_MAIN_COLOR_CODE_BLUE='12';
-__BU_MAIN_COLOR_CODE_FUSCHIA='13';
+__BU_MAIN_COLOR_CODE_FUCHSIA='13';
 __BU_MAIN_COLOR_CODE_AQUA='14';
 __BU_MAIN_COLOR_CODE_WHITE='15';
 
@@ -138,7 +138,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_LIME'		"$__BU_M
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_YELLOW'	"$__BU_MAIN_COLOR_CODE_YELLOW"	'Int'	"This variable stores the « light yellow » color code"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_BLUE'		"$__BU_MAIN_COLOR_CODE_BLUE"	'Int'	"This variable stores the « blue » color code"			"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_FUSCHIA'	"$__BU_MAIN_COLOR_CODE_FUSCHIA"	'Int'	"This variable stores the « fuschia » color code"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_FUCHSIA'	"$__BU_MAIN_COLOR_CODE_FUCHSIA"	'Int'	"This variable stores the « fuchsia » color code"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_AQUA'		"$__BU_MAIN_COLOR_CODE_AQUA"	'Int'	"This variable stores the « aqua blue » color code"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_WHITE'		"$__BU_MAIN_COLOR_CODE_WHITE"	'Int'	"This variable stores the « white » color code"			"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))";
 
@@ -250,9 +250,9 @@ printf "%s" "$__BU_MAIN_COLOR_TXT_BLUE";	BU::ModuleInit::DisplayInitGlobalVarsIn
 __BU_MAIN_COLOR_TXT_CYAN="$(BU::Main::ModConfig::Colors::SetTextColor 		"$__BU_MAIN_COLOR_CODE_CYAN")";
 printf "%s" "$__BU_MAIN_COLOR_TXT_CYAN";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_CYAN' "$__BU_MAIN_COLOR_TXT_CYAN"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'cyan')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
-# Fuschia colored text.
-__BU_MAIN_COLOR_TXT_FUSCHIA="$(BU::Main::ModConfig::Colors::SetTextColor		"$__BU_MAIN_COLOR_CODE_FUSCHIA")";
-printf "%s" "$__BU_MAIN_COLOR_TXT_FUSCHIA";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_FUSCHIA' "$__BU_MAIN_COLOR_TXT_FUSCHIA"	'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'fuschia')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+# Fuchsia colored text.
+__BU_MAIN_COLOR_TXT_FUCHSIA="$(BU::Main::ModConfig::Colors::SetTextColor		"$__BU_MAIN_COLOR_CODE_FUCHSIA")";
+printf "%s" "$__BU_MAIN_COLOR_TXT_FUCHSIA";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_FUCHSIA' "$__BU_MAIN_COLOR_TXT_FUCHSIA"	'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'fuchsia')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Gray colored text.
 __BU_MAIN_COLOR_TXT_GRAY="$(BU::Main::ModConfig::Colors::SetTextColor 		"$__BU_MAIN_COLOR_CODE_GRAY")";
@@ -265,7 +265,7 @@ __BU_MAIN_COLOR_TXT_GREEN="$(BU::Main::ModConfig::Colors::SetTextColor 		"$__BU_
 printf "%s" "$__BU_MAIN_COLOR_TXT_GREEN";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_GREEN' "$__BU_MAIN_COLOR_TXT_GREEN"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'light green')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Lime green colored text.
-__BU_MAIN_COLOR_TXT_LIME="$(BU::Main::ModConfig::Colors::SetTextColor			"$__BU_MAIN_COLOR_CODE_LIME")";	
+__BU_MAIN_COLOR_TXT_LIME="$(BU::Main::ModConfig::Colors::SetTextColor			"$__BU_MAIN_COLOR_CODE_LIME")";
 printf "%s" "$__BU_MAIN_COLOR_TXT_LIME";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_LIME' "$__BU_MAIN_COLOR_TXT_LIME"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'lime green')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Maroon colored text.
@@ -394,9 +394,9 @@ printf "%s" "$__BU_MAIN_COLOR_BG_BLUE"; BU::ModuleInit::DisplayInitGlobalVarsInf
 __BU_MAIN_COLOR_BG_CYAN="$(BU::Main::ModConfig::Colors::SetBGColor        "$__BU_MAIN_COLOR_CODE_CYAN")";
 printf "%s" "$__BU_MAIN_COLOR_BG_CYAN"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_CYAN' "$__BU_MAIN_COLOR_BG_CYAN"       'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_CYAN")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
-# Fuschia colored background.
-__BU_MAIN_COLOR_BG_FUSCHIA="$(BU::Main::ModConfig::Colors::SetBGColor     "$__BU_MAIN_COLOR_CODE_FUSCHIA")";
-printf "%s" "$__BU_MAIN_COLOR_BG_FUSCHIA"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_FUSCHIA' "$__BU_MAIN_COLOR_BG_FUSCHIA"    'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_FUSCHIA")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+# Fuchsia colored background.
+__BU_MAIN_COLOR_BG_FUCHSIA="$(BU::Main::ModConfig::Colors::SetBGColor     "$__BU_MAIN_COLOR_CODE_FUCHSIA")";
+printf "%s" "$__BU_MAIN_COLOR_BG_FUCHSIA"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_FUCHSIA' "$__BU_MAIN_COLOR_BG_FUCHSIA"    'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_FUCHSIA")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Gray colored background.
 __BU_MAIN_COLOR_BG_GRAY="$(BU::Main::ModConfig::Colors::SetBGColor        "$__BU_MAIN_COLOR_CODE_GRAY")";
