--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -11,7 +11,7 @@
 
 #### DEFINING THE NEEDED RESOURCES
 
-## FUNCTIONS
+## SET FUNCTIONS
 
 # Writing the text zone's background color into a file, to be processed by any function which needs to know what is the current color.
 function BU::Main::ModConfig::Colors::SetBGColor()
@@ -78,6 +78,10 @@ function BU::Main::ModConfig::Colors::SetTextColor()
         return 1;
     fi
 }
+
+# -----------------------------------------------
+
+## PRINT FUNCTIONS
 
 # Writing the command substitution text for the text coloration.
 
