Updating the French documentation

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -83,18 +83,17 @@ function BU::Main::ModConfig::Colors::SetTextColor()
 
 ## PRINT FUNCTIONS
 
-# Writing the command substitution text for the text coloration.
-
-# Don't call the "BU::DechoHighlightFunction()" function to color the function name, it must stay perfectly visible on every colors, and the default,
-# and the "$__BU_MAIN_STAT_DECHO" function's value is still set as its default value (in order to avoid bugs during the main module's initialization) : forbid
-function BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd() { printf "This command substitution executes the $(BU::DechoHighlightFunction "BU::Main::ModConfig::Colors::SetTextColor") function in order to color the text with the defined « %s » color's code" "$1"; }
-
 # Writing the command substitution text for the background coloration
 
 # Don't call the "BU::DechoHighlightFunction()" function to color the function name, it must stay perfectly visible on every colors, and the default,
 # and the "$__BU_MAIN_STAT_DECHO" function's value is still set as its default value (in order to avoid bugs during the main module's initialization) : forbid
 function BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd() { printf "This command substitution executes the « BU::Main::ModConfig::Colors::SetBGColor() » function in order to color the text's background with the defined « %s » color's code" "$1"; }
 
+# Writing the command substitution text for the text coloration.
+
+# Don't call the "BU::DechoHighlightFunction()" function to color the function name, it must stay perfectly visible on every colors, and the default,
+# and the "$__BU_MAIN_STAT_DECHO" function's value is still set as its default value (in order to avoid bugs during the main module's initialization) : forbid
+function BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd() { printf "This command substitution executes the $(BU::DechoHighlightFunction "BU::Main::ModConfig::Colors::SetTextColor") function in order to color the text with the defined « %s » color's code" "$1"; }
 
 # -----------------------------------------------
 
@@ -381,30 +380,30 @@ printf "%s" "$__BU_MAIN_COLOR_TXT_RESET";       BU::ModuleInit::DisplayInitGloba
 # Aqua blue colored background.
 __BU_MAIN_COLOR_BG_AQUA="$(BU::Main::ModConfig::Colors::SetBGColor        "$__BU_MAIN_COLOR_CODE_AQUA")";
 BU::ModuleInit::DisplayInitGlobalVarsInfos
-printf "%s" "$__BU_MAIN_COLOR_BG_AQUA";printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_AQUA' "$__BU_MAIN_COLOR_BG_AQUA"     'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_AQUA")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_AQUA";printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_AQUA' "$__BU_MAIN_COLOR_BG_AQUA"     'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "aqua")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Black colored background.
 __BU_MAIN_COLOR_BG_BLACK="$(BU::Main::ModConfig::Colors::SetBGColor       "$__BU_MAIN_COLOR_CODE_BLACK")";
-printf "%s" "$__BU_MAIN_COLOR_BG_BLACK"; printf "%s" "$__BU_MAIN_COLOR_TXT_WHITE";  BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_BLACK' "$__BU_MAIN_COLOR_BG_BLACK"   'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_BLACK")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_BLACK"; printf "%s" "$__BU_MAIN_COLOR_TXT_WHITE";  BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_BLACK' "$__BU_MAIN_COLOR_BG_BLACK"   'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "black")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Deep blue colored background.
 __BU_MAIN_COLOR_BG_BLUE="$(BU::Main::ModConfig::Colors::SetBGColor        "$__BU_MAIN_COLOR_CODE_BLUE")";
-printf "%s" "$__BU_MAIN_COLOR_BG_BLUE"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_BLUE' "$__BU_MAIN_COLOR_BG_BLUE"             'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_BLUE")"      "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_BLUE"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_BLUE' "$__BU_MAIN_COLOR_BG_BLUE"             'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "blue")"      "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 
 # -------
 
 # Cyan blue colored background.
 __BU_MAIN_COLOR_BG_CYAN="$(BU::Main::ModConfig::Colors::SetBGColor        "$__BU_MAIN_COLOR_CODE_CYAN")";
-printf "%s" "$__BU_MAIN_COLOR_BG_CYAN"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_CYAN' "$__BU_MAIN_COLOR_BG_CYAN"       'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_CYAN")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_CYAN"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_CYAN' "$__BU_MAIN_COLOR_BG_CYAN"       'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "cyan")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Fuchsia colored background.
 __BU_MAIN_COLOR_BG_FUCHSIA="$(BU::Main::ModConfig::Colors::SetBGColor     "$__BU_MAIN_COLOR_CODE_FUCHSIA")";
-printf "%s" "$__BU_MAIN_COLOR_BG_FUCHSIA"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_FUCHSIA' "$__BU_MAIN_COLOR_BG_FUCHSIA"    'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_FUCHSIA")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_FUCHSIA"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_FUCHSIA' "$__BU_MAIN_COLOR_BG_FUCHSIA"    'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "fuchsia")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Gray colored background.
 __BU_MAIN_COLOR_BG_GRAY="$(BU::Main::ModConfig::Colors::SetBGColor        "$__BU_MAIN_COLOR_CODE_GRAY")";
-printf "%s" "$__BU_MAIN_COLOR_BG_GRAY"; printf "%s" "$__BU_MAIN_COLOR_TXT_WHITE"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_GRAY' "$__BU_MAIN_COLOR_BG_GRAY"       'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "$__BU_MAIN_COLOR_BG_GRAY")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_GRAY"; printf "%s" "$__BU_MAIN_COLOR_TXT_WHITE"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_GRAY' "$__BU_MAIN_COLOR_BG_GRAY"       'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd "gray")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 
 # -------
