--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -24,7 +24,7 @@
 ## GETTING THE DATE
 
 # Saving the current date in YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second)
-__BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %Hh:%Mm:%Ss")";
+__BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %H:%M:%S")";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "$__BU_MAIN_TIME_DATE" 'CMD' \
 	"This command substitution executes the « date » command, and passes arguments in order to print the date at the « YYYY-MM-DD hh-mm-ss » format"  \
