--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -169,6 +169,12 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_VIOLET'	"$__BU_
 
 ## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "BU::Main::ModConfig::Colors::SetTextColor" FUNCTIONS, THEN ENCODED WITH THE "tput" COMMAND
 
+# Commands text display color           | Default color : gray
+__BU_MAIN_COLOR_CODE_CMD="$__BU_MAIN_COLOR_CODE_GRAY";
+
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_CMD' "$__BU_MAIN_COLOR_CODE_CMD"			'Int' "This variable stores the color code for the commands names messages" \
+	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
 # Error text display color				| Default color : Red
 __BU_MAIN_COLOR_CODE_ERROR="$__BU_MAIN_COLOR_CODE_RED";
 
@@ -351,6 +357,7 @@ printf "%s" "$__BU_MAIN_COLOR_CODE_RESET";
 ## SPECIFIC TEXT ENCODING
 
 # Specific colors encoding.
+__BU_MAIN_COLOR_TXT_CMD="$(BU::Main::ModConfig::Colors::SetTextColor        "$__BU_MAIN_COLOR_CODE_CMD")";          # Command name's display color.
 __BU_MAIN_COLOR_TXT_ERROR="$(BU::Main::ModConfig::Colors::SetTextColor      "$__BU_MAIN_COLOR_CODE_ERROR")";        # Error text display color.
 __BU_MAIN_COLOR_TXT_FUNCTION="$(BU::Main::ModConfig::Colors::SetTextColor   "$__BU_MAIN_COLOR_CODE_FUNCTION")";     # Function name display color
 __BU_MAIN_COLOR_TXT_HIGHLIGHT="$(BU::Main::ModConfig::Colors::SetTextColor  "$__BU_MAIN_COLOR_CODE_HIGHLIGHT")";    # Highlighted text display color.
@@ -363,18 +370,19 @@ __BU_MAIN_COLOR_TXT_WARNING="$(BU::Main::ModConfig::Colors::SetTextColor    "$__
 # Resetting the text's color to terminal's default text color.
 __BU_MAIN_COLOR_TXT_RESET="$__BU_MAIN_COLOR_CODE_RESET"
 
-printf "%s" "$__BU_MAIN_COLOR_TXT_ERROR";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_ERROR'		"$__BU_MAIN_COLOR_TXT_ERROR"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'error messages')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))";
-printf "%s" "$__BU_MAIN_COLOR_TXT_FUNCTION";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_FUNCTION'	"$__BU_MAIN_COLOR_TXT_FUNCTION"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'function names')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))";
-printf "%s" "$__BU_MAIN_COLOR_TXT_HIGHLIGHT";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_HIGHLIGHT'	"$__BU_MAIN_COLOR_TXT_HIGHLIGHT"	'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'text highlighting')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))";
-printf "%s" "$__BU_MAIN_COLOR_TXT_NEWSTEP";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_NEWSTEP'	"$__BU_MAIN_COLOR_TXT_NEWSTEP"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'new step messages')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))";
-printf "%s" "$__BU_MAIN_COLOR_TXT_PATH";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_PATH'		"$__BU_MAIN_COLOR_TXT_PATH"			'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'paths highlighting')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))";
-printf "%s" "$__BU_MAIN_COLOR_TXT_RESET";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_RESET'		"$__BU_MAIN_COLOR_TXT_RESET"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'success messages')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))";
-printf "%s" "$__BU_MAIN_COLOR_TXT_SUCCESS";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_SUCCESS'	"$__BU_MAIN_COLOR_TXT_SUCCESS"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'success messages')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_CMD";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_CMD'        "$__BU_MAIN_COLOR_TXT_CMD"          'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'commands names')"      "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_ERROR";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_ERROR'		"$__BU_MAIN_COLOR_TXT_ERROR"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'error messages')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_FUNCTION";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_FUNCTION'	"$__BU_MAIN_COLOR_TXT_FUNCTION"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'function names')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_HIGHLIGHT";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_HIGHLIGHT'	"$__BU_MAIN_COLOR_TXT_HIGHLIGHT"	'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'text highlighting')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_NEWSTEP";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_NEWSTEP'	"$__BU_MAIN_COLOR_TXT_NEWSTEP"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'new step messages')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_PATH";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_PATH'		"$__BU_MAIN_COLOR_TXT_PATH"			'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'paths highlighting')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_RESET";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_RESET'		"$__BU_MAIN_COLOR_TXT_RESET"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'success messages')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_SUCCESS";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_SUCCESS'	"$__BU_MAIN_COLOR_TXT_SUCCESS"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'success messages')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
 
-printf "%s" "$__BU_MAIN_COLOR_TXT_VAR";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_VAR'        "$__BU_MAIN_COLOR_TXT_VAR"          'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'variables names highlighting')"        "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
-printf "%s" "$__BU_MAIN_COLOR_TXT_WARNING";     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_WARNING'    "$__BU_MAIN_COLOR_TXT_WARNING"      'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'warning messages')"                    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_VAR";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_VAR'        "$__BU_MAIN_COLOR_TXT_VAR"          'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'variables names highlighting')"        "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-14 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_WARNING";     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_WARNING'    "$__BU_MAIN_COLOR_TXT_WARNING"      'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'warning messages')"                    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-14 ))";
 
-printf "%s" "$__BU_MAIN_COLOR_TXT_RESET";       BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_RESET'      "$__BU_MAIN_COLOR_TXT_RESET"        'CMD' "This command substitution executes the « tput sgr0 » command to reset the text mode's text color"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-14 ))";
+printf "%s" "$__BU_MAIN_COLOR_TXT_RESET";       BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_RESET'      "$__BU_MAIN_COLOR_TXT_RESET"        'CMD' "This command substitution executes the « tput sgr0 » command to reset the text mode's text color"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-15 ))";
 
 # -----------------------------------------------
 
@@ -507,6 +515,7 @@ printf "%s" "$__BU_MAIN_COLOR_TXT_RESET";
 ## SPECIFIC BACKGROUND ENCODING
 
 # Specific colors encoding.
+__BU_MAIN_COLOR_BG_CMD="$(BU::Main::ModConfig::Colors::SetBGColor       "$__BU_MAIN_COLOR_CODE_ERROR")";        # Command name's display color.
 __BU_MAIN_COLOR_BG_ERROR="$(BU::Main::ModConfig::Colors::SetBGColor     "$__BU_MAIN_COLOR_CODE_ERROR")";        # Error text display color.
 __BU_MAIN_COLOR_BG_FUNCTION="$(BU::Main::ModConfig::Colors::SetBGColor  "$__BU_MAIN_COLOR_CODE_FUNCTION")";     # Function name display color
 __BU_MAIN_COLOR_BG_HIGHLIGHT="$(BU::Main::ModConfig::Colors::SetBGColor "$__BU_MAIN_COLOR_CODE_HIGHLIGHT")";    # Highlighted text display color.
@@ -519,14 +528,15 @@ __BU_MAIN_COLOR_BG_WARNING="$(BU::Main::ModConfig::Colors::SetBGColor   "$__BU_M
 # Resetting the text's background color to terminal's default text color.
 __BU_MAIN_COLOR_BG_RESET="$__BU_MAIN_COLOR_CODE_RESET"
 
-printf "%s" "$__BU_MAIN_COLOR_BG_ERROR";        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_ERROR'       "$__BU_MAIN_COLOR_BG_ERROR"     'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'error messages')"        "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))";
-printf "%s" "$__BU_MAIN_COLOR_BG_FUNCTION";     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_FUNCTION'    "$__BU_MAIN_COLOR_BG_FUNCTION"  'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'function names')"        "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK";
-printf "%s" "$__BU_MAIN_COLOR_BG_HIGHLIGHT";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_HIGHLIGHT'   "$__BU_MAIN_COLOR_BG_HIGHLIGHT" 'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'text highlighting')"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_WHITE";
-printf "%s" "$__BU_MAIN_COLOR_BG_NEWSTEP";      BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_NEWSTEP'     "$__BU_MAIN_COLOR_BG_NEWSTEP"   'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'new step messages')"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK";
-printf "%s" "$__BU_MAIN_COLOR_BG_PATH";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_PATH'        "$__BU_MAIN_COLOR_BG_PATH"      'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'paths highlighting')"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_WHITE";
-printf "%s" "$__BU_MAIN_COLOR_BG_SUCCESS";      BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_SUCCESS'     "$__BU_MAIN_COLOR_BG_SUCCESS"   'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'success messages')"      "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-12 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK";
+printf "%s" "$__BU_MAIN_COLOR_BG_CMD";          BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_CMD'         "$__BU_MAIN_COLOR_BG_CMD"       'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'commands names')"        "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_ERROR";        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_ERROR'       "$__BU_MAIN_COLOR_BG_ERROR"     'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'error messages')"        "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_FUNCTION";     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_FUNCTION'    "$__BU_MAIN_COLOR_BG_FUNCTION"  'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'function names')"        "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK";
+printf "%s" "$__BU_MAIN_COLOR_BG_HIGHLIGHT";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_HIGHLIGHT'   "$__BU_MAIN_COLOR_BG_HIGHLIGHT" 'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'text highlighting')"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_WHITE";
+printf "%s" "$__BU_MAIN_COLOR_BG_NEWSTEP";      BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_NEWSTEP'     "$__BU_MAIN_COLOR_BG_NEWSTEP"   'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'new step messages')"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK";
+printf "%s" "$__BU_MAIN_COLOR_BG_PATH";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_PATH'        "$__BU_MAIN_COLOR_BG_PATH"      'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'paths highlighting')"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_WHITE";
+printf "%s" "$__BU_MAIN_COLOR_BG_SUCCESS";      BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_SUCCESS'     "$__BU_MAIN_COLOR_BG_SUCCESS"   'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'success messages')"      "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))"; printf "%s" "$__BU_MAIN_COLOR_TXT_BLACK";
 
-printf "%s" "$__BU_MAIN_COLOR_BG_VAR";          BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_VAR'         "$__BU_MAIN_COLOR_BG_VAR"       'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'variables names highlighting')"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
-printf "%s" "$__BU_MAIN_COLOR_BG_WARNING";      BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_WARNING'     "$__BU_MAIN_COLOR_BG_WARNING"   'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'warning messages')"              "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-13 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_VAR";          BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_VAR'         "$__BU_MAIN_COLOR_BG_VAR"       'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'variables names highlighting')"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-14 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_WARNING";      BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_WARNING'     "$__BU_MAIN_COLOR_BG_WARNING"   'CMD' "$(BU::Main::ModConfig::Colors::PrintColorBGVarsNameSubsCmd 'warning messages')"              "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-14 ))";
 
-printf "%s" "$__BU_MAIN_COLOR_BG_RESET";        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_RESET'       "$__BU_MAIN_COLOR_BG_RESET"     'CMD' "This command substitution executes the « tput sgr0 » command to reset the text mode's text color"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-14 ))";
+printf "%s" "$__BU_MAIN_COLOR_BG_RESET";        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_RESET'       "$__BU_MAIN_COLOR_BG_RESET"     'CMD' "This command substitution executes the « tput sgr0 » command to reset the text mode's text color"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-15 ))";
