Improving the Args.lib file

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -77,7 +77,7 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -s "$__BU_MAIN_R
 
 	BU::ModuleInit::AskPrintLog;
 
-	exit 1
+	exit 1;
 
 # Checking if the current user cannot read the "Bash-utils-root-val.path" (file owned by the "root" user).
 elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_PATH" ]; then
@@ -128,7 +128,7 @@ __BU_MAIN_MODULE_CONF_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MODULE_UTILS_C
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_DIR_PATH' "$__BU_MAIN_MODULE_CONF_DIR_PATH"   'Dirpath' "This global variable stores the path of the « main » module's configurations directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils documentation folder			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
-__BU_MAIN_MODULE_DOCS_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "docs")";	
+__BU_MAIN_MODULE_DOCS_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "docs")";
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_DOCS_DIR_PATH' "$__BU_MAIN_MODULE_DOCS_DIR_PATH"   'Dirpath' "This global variable stores the path of the whole library's documentation directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils library root directory	        |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
@@ -190,24 +190,32 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_MOD_DIR_PATH' "
 ## "config" FOLDER'S CONTENT
 
 # Bash Utils color encoding variables configuration file.
-__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Colors.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH' "$__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Colors.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Colors.conf")";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH' "$__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Colors.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
-# Project's initialization variables.
-__BU_MAIN_MODULE_CONF_INIT_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Project.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_INIT_FILE_PATH' "$__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Project.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+# Bash Utils exit code variables configuration file.
+__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Exit.conf")";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH' "$__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Exit.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+
+# Bash Utils file system variables configuration file.
+__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Exit.conf"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH' "$__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Filesystem.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+
+# Bash Utils project's initialization variables.
+__BU_MAIN_MODULE_CONF_FILE_INIT_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Project.conf")";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_INIT_PATH' "$__BU_MAIN_MODULE_CONF_FILE_INIT_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Project.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils status variables configuration file.
-__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Status.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH' "$__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Status.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Status.conf")";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH' "$__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Status.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils text variables configuration file.
-__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Text.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH' "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Text.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Text.conf")";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH' "$__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Text.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Bash Utils time variables configuration file.
-__BU_MAIN_MODULE_CONF_TIME_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Time.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_TIME_FILE_PATH' "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Time.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+__BU_MAIN_MODULE_CONF_FILE_TIME_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Time.conf")";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_FILE_TIME_PATH' "$__BU_MAIN_MODULE_CONF_FILE_TIME_PATH" 'Filepath' "This global variable stores the path of the « main » module's « Time.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # -----------------------------------------------
 
@@ -220,7 +228,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILE_INITIALIZE
 # -----------------------------------------------
 
  ## "functions" FOLDER'S SUB-FOLDERS CONTENT.
- 
+
 # Note : if a variable is an array, please leave empty the second argument of the "BU::ModuleInit::DisplayInitGlobalVarsInfos()" function.
 
 # Main module's library functions folder's path.
@@ -242,7 +250,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PAT
 # in order to check which status variables values have to be changed to their new default value,
 # after the main module's initialization.
 
-# It MUST NOT store any value.
+# It MUST NOT store any value now, it will be processed in the main module's initializer file.
 __BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY=()
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « main » module's by the user" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
@@ -275,11 +283,13 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_A
 
 __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=();
 
-__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("$__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" \
-    "$__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" \
-    "$__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" \
-    "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" \
-    "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH");
+__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("$__BU_MAIN_MODULE_CONF_FILE_INIT_PATH" \
+    "$__BU_MAIN_MODULE_CONF_FILE_STATUS_PATH" \
+    "$__BU_MAIN_MODULE_CONF_FILE_COLORS_PATH" \
+    "$__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH" \
+    "$__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH" \
+    "$__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH" \
+    "$__BU_MAIN_MODULE_CONF_FILE_TIME_PATH");
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))" "${__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
 
