Added Drive.lib and DriveFS.lib files in the Hardware library folder

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -22,7 +22,7 @@
 #### PROCESSING FILE SYSTEM INFORMATIONS
 
 # Getting the filesystem's name.
-__BU_MAIN_FS_NAME="$(df -Th . | awk 'FNR == 2 {print $2}')"
+__BU_MAIN_FS_NAME="$(df -Th . | awk 'FNR == 2 {print $2}')";
 
 ## EXT2 FILE SYSTEM'S INFORMATIONS
  
