--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -174,7 +174,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_WARNING' "$__BU
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
 
 # Aqua blue colored text.
-__BU_MAIN_COLOR_TXT_AQUA="$(BU::Main::Decho::SetTextColor			"$__BU_MAIN_COLOR_CODE_AQUA")";
+__BU_MAIN_COLOR_TXT_AQUA="$(set -e; BU::Main::Decho::SetTextColor			"$__BU_MAIN_COLOR_CODE_AQUA")";
 printf "%s" "$__BU_MAIN_COLOR_TXT_AQUA";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_TXT_AQUA' "$__BU_MAIN_COLOR_TXT_AQUA"	'CMD' "$(BU::Main::ModConfig::Colors::PrintColorTextVarsNameSubsCmd 'aqua blue')"	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Black colored text.
